# tokenwords

./: Cargo.toml  README.md  deploy-keypair.json
.github/actions/setup-all-development-tools/: action.yml
.github/workflows/: deploy-testnet.yml
programs/predict-chat-program/: Cargo.toml
programs/predict-chat-program/src/: lib.rs
scripts/: build-so.sh
